--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,41 @@
 .App {
+  background-color: #f9f7fe;
   font-family: "Times New Roman", Times, serif;
 }
 
 .App .container {
-  max-width: 800px;
   display: block;
-  margin: 50px auto;
+  margin: 0 auto;
+  max-width: 800px;
+}
+
+.App section {
+  background-color: white;
+  border-radius: 10px;
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1);
+  margin: 25px 0;
+  padding: 20px 35px;
+}
+
+.App header h1 {
+  color: #342f51;
+}
+
+.App footer p {
+  color: #342f51;
+}
+
+.App a {
+  text-decoration: none;
+  color: #6c63ff;
+}
+
+.App li {
+  list-style-type: none;
+  display: inline;
+  margin-right: 10px;
+}
+
+.App ul {
+  padding-left: 0;
 }
