--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,20 @@
 .App {
   background-color: #f9f7fe;
-  font-family: "Times New Roman", Times, serif;
+  font-family: "Roboto", sans-serif;
 }
 
 .App .container {
   display: block;
   margin: 0 auto;
   max-width: 800px;
+}
+
+.App h1,
+h2,
+h3,
+h4,
+h5 {
+  font-family: "Playfair Display", serif;
 }
 
 .App section {
@@ -19,6 +27,7 @@
 
 .App header h1 {
   color: #342f51;
+  letter-spacing: 3px;
 }
 
 .App footer p {
